# circleci-credit-by-user

./: .gitignore  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/circleci_credit_by_user/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
tests/fixtures/: sample_usage.csv
