[project]
name = "circleci-credit-by-user"
version = "0.2.0"
description = "Aggregate CircleCI credits by trigger actor using Usage API and Pipeline API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CircleCI Community Contributors" }]
keywords = ["circleci", "usage", "credits", "finops", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hidetaka-cci/circleci-credit-by-user"
Repository = "https://github.com/hidetaka-cci/circleci-credit-by-user"
Issues = "https://github.com/hidetaka-cci/circleci-credit-by-user/issues"
Documentation = "https://github.com/hidetaka-cci/circleci-credit-by-user#readme"

[project.scripts]
circleci-credit-by-user = "circleci_credit_by_user.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/circleci_credit_by_user"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
